--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "icon": "icons/yehiibhii.png",
   "author": {
     "name": "Daniel Vallejo",
-    "email": "holadhan@juanitovenenoestudio",
+    "email": "holadhan@juanitovenenoestudio.com",
     "url": "https://dannyveneno.tech"
   },
   "repository": {
