--- a/package.json
+++ b/package.json
@@ -28,5 +28,5 @@
     "url": "https://github.com/DanyVeneno/VSthemecode2024.git",
     "type": "git"
   },
-  "publisher": "Juanito Veneno Estudio"
+  "publisher": "juanito-veneno-estudio"
 }
