--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "icon": "icons/yehiibhii.png",
   "author": {
     "name": "Daniel Vallejo",
-    "email": "holadhan@juanitovenenoestudio.com",
-    "url": "https://dannyveneno.tech"
+    "email": "holadhan@proton.me",
+    "url": "https://ybestudio.tech"
   },
   "repository": {
     "url": "https://github.com/DanyVeneno/VSthemecode2024.git",
